--- a/index.html
+++ b/index.html
@@ -595,7 +595,35 @@
 				<svg class="icon" aria-hidden="true">
 					<use xlink:href="#iconguanlian"></use>
 				</svg>标签</p>
-			<iframe src="iframe-2.0/lable.html" name="lableChoose" data-id="label0"></iframe>
+			<!-- 标签搜索 -->
+			<div class="input-second-container lable-input-container labelContainer">
+				<label class="layui-form-label lable-title">添加标签：</label>
+				<div class="layui-inline inputLables" style="width: 215px;padding-right: 45px;">
+					<input type="text" name="inputTags" id="inputTags" required lay-verify="required" placeholder="默认文本"
+						   autocomplete="off" class="layui-input" onkeypress="javascript:return gosearch();">
+					<div class="input-number"><span class="input-on-number" style="padding: 0;background-color:#fff;color:#999999;">0</span>/<span
+							class="input-max-number" style="padding: 0;background-color:#fff;color:#999999;">10</span></div>
+				</div>
+				<button type="button" class="layui-btn lable-search lableSearch">搜索</button>
+			</div>
+			<!-- 标签搜索群 -->
+			<div class="lableGroup">
+				<!-- <button type="button" class="lable-btn layui-btn-primary" data-id="1">爱情</button>
+                <button type="button" class="lable-btn layui-btn-primary" data-id="1">爱情</button> -->
+			</div>
+			<!--已添加标签-->
+			<div class="lableAdd">
+				<label class="layui-form-label lable-title">已添加标签：</label>
+				<div class="layui-inline num" >
+					<span class="lable-on-number">0</span>/<span
+						class="lable-max-number">10</span>
+				</div>
+				<div class="lable-show">
+					<!--<button type="button" class="lable-add-btn">欧美认电视剧
+                        <i class="layui-icon layui-icon-close close"></i>
+                    </button>-->
+				</div>
+			</div>
 		</article>
 
 		<article id="table">
@@ -959,6 +987,7 @@
 <script type="text/javascript" src="layui-2.0/layui.js"></script>
 <script type="text/javascript" src="layui-2.0/jquery3.4.1.js"></script>
 <script type="text/javascript" src="layui-2.0/public.js"></script>
+<script type="text/javascript" src="layui-2.0/tags.js"></script>
 <script type="text/javascript" src="layui-2.0/template/inputTags/inputTags.js"></script>
 <script type="text/javascript">
 	// iframe当前标识
@@ -970,7 +999,7 @@
 		var element = layui.element,
 			form = layui.form,
 			laydate = layui.laydate,
-			$ = layui.$;;
+			$ = layui.$;
 		var upload = layui.upload;
 
 		//图片上传 之 主图和其他附图
