--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 		<a href="#color">颜色</a>
 		<a href="#tab">选项卡</a>
 		<a href="#select">下拉</a>
+		<a href="#cascader">多级联下拉框</a>
 		<a href="#checkbox">复选框</a>
 		<a href="#radiobox">单选框</a>
 		<a href="#rule">法规提示</a>
@@ -360,6 +361,8 @@
 					</select>
 				</form>
 			</div>
+		</article>
+		<article id="cascader">
 			<p class="title">
 				<svg class="icon" aria-hidden="true">
 					<use xlink:href="#iconguanlian"></use>
