--- a/index.html
+++ b/index.html
@@ -950,7 +950,7 @@
 				<span id="popup1" class="popup">弹窗1</span>
 				<span id="popup2" class="popup">弹窗2</span>
 				<span id="popup3" class="popup">弹窗3</span>
-				<span id="popup4" class="popup">弹窗4</span>
+				<span id="popup4" class="popup">时间弹窗</span>
 				<span id="popup5" class="popup">弹窗5</span>
 				<span id="popup6" class="popup">弹窗6</span>
 				<span id="popup7" class="popup">弹窗7</span>
@@ -1118,7 +1118,7 @@
 		});
 
 
-		//弹窗4
+		//时间弹窗
 		$("#popup4").click(function () {
 			//页面层需要引入日期插件
 			layer.open({
