--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<!-- 字体图标 -->
 	<script src="layui-2.0/font/iconfont.js"></script>
 	<style type="text/css">
-	
+
 		html {
 			background-color: #fff;
 		}
@@ -75,8 +75,10 @@
 	</style>
 </head>
 
-<body y>
+<body>
 
+	<!-- test -->
+	
 	<menu id="anchor">
 		<a href="#frame">框架</a>
 		<a href="#button">按钮</a>
