--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<title>火把知识-后台-规范手册</title>
@@ -9,7 +10,6 @@
 	<!-- 字体图标 -->
 	<script src="layui-2.0/font/iconfont.js"></script>
 	<style type="text/css">
-
 		html {
 			background-color: #fff;
 		}
@@ -74,6 +74,7 @@
 		}
 	</style>
 </head>
+
 <body>
 
 	<menu id="anchor">
@@ -433,22 +434,22 @@
 			* 作者: ym
 			* 创建时间：2020/3/27
 			* 描述：图片比例组件
-			*/ --> 
+			*/ -->
 			<div class="picPicture" style="margin: 10px 0;">
 				<div class="pic-three">
 					<div class="noPicture">
 						点击上传
 					</div>
-					<div class="cancel">
-						点击删除
-					</div>
+				</div>
+				<div class="cancel">
+					点击删除
 				</div>
 			</div>
 		</article>
 		<article>
 			<p class="title">
 				<svg class="icon" aria-hidden="true">
-					<use xlink:href="#iconguanlian"></use>  
+					<use xlink:href="#iconguanlian"></use>
 				</svg>固定底部按钮</p>
 			<div class="layui-footer">
 				<button class="layui-btn">保存并提交</button>
@@ -954,6 +955,96 @@
 					</tfoot>
 				</table>
 			</div>
+			<!-- /*
+			* 作者: ym
+			* 创建时间：2020/4/3
+			* 描述：数据表格5
+			*/ -->
+			<!--数据表格5-->
+			<div class="table table5">
+				<table class="layui-table" style="table-layout:fixed;margin:0;">
+					<colgroup>
+						<col width="20%">
+						<col width="30%">
+						<col width="10%">
+						<col width="10%">
+						<col width="10%">
+						<col width="25%">
+					</colgroup>
+					<thead>
+						<tr>
+							<th>
+								商品ID/外部商品ID
+							</th>
+							<th >商品信息</th>
+							<th >促销价</th>
+							<th >实付价</th>
+							<th >数量</th>
+							<th style="min-width: 120px;">商品总价
+								<svg class="icon tableIcon" aria-hidden="true">
+									<use xlink:href="#iconicon-tips-line"></use>
+								</svg>
+								<div class="tableIcon-content">
+									<div class="tableIcon-block">我是总成本我是总成本我是总成本我是总成本我是总成本我是总成本我是总成本
+									</div>
+									<div class="tableIcon-hover-arrow"></div>
+								</div>
+							</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr class="prompt-message">
+							<td class="information">
+								<span class="package">包裹1</span>
+								<span class="logistics-status">已发货</span>
+								<span class='logistics-company'>德邦物流:123654789</span>
+								<a href="javascript:;" class="sub1-color logistics">查看物流</a>
+							</td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="textOverflow"><p>1002545585/2348900078665</p>
+							<p class="txt3-color">1002545585</p></td>
+							<td class="tableTitle" >
+								<div class="pic-two">
+									<img src="https://mhuoba.oss-cn-hangzhou.aliyuncs.com/picture/audio/20190812/18/20190812183751909.jpg!w81h50"
+										alt="">
+								</div>
+								<div class="layui-inline message">
+									<p class="textTwoOver" title="">商品标题最多两行题最多两行行商品标题最多两行最多两行最多两行行最多两行最多两行</p>
+								</div>
+							</td>
+							<td>
+								<p class="textTwoOver">￥12.55 </p>
+							</td>
+							<td >￥76.20</td>
+							<td >211155</td>
+							<td >
+								<span>￥12.55</span>
+								<span class="sub1-color status">退款中</span>
+							</td>
+						</tr>
+					</tbody>
+					<tfoot>
+						<tr>
+							<td colspan="9">
+								<div class="footFlex">
+									<div class="footText">商品总价: ¥84.90</div>
+									<div class="footText">优惠价扣减: -¥1.00</div>
+									<div class="footText">多商品活动扣减: -¥4.90</div>
+									<div class="footText fg">运费: ¥1.00</div>
+									<div class="sum">订单总价: ¥82.22</div>
+								</div>
+							</td>
+						</tr>
+					</tfoot>
+				</table>
+			</div>
+
 		</article>
 		<article id="popup">
 			<p class="title">
@@ -969,6 +1060,8 @@
 				<span id="popup5" class="popup">弹窗5</span>
 				<span id="popup6" class="popup">弹窗6</span>
 				<span id="popup7" class="popup">弹窗7</span>
+				<span id="popup8" class="popup">弹窗8</span>
+				<span id="popup9" class="popup">弹窗9</span>
 				<span id="msg" class="popup">弹窗msg</span>
 				<span id="confirm" class="popup">弹窗confirm</span>
 				<span id="alert" class="popup">弹窗alert</span>
@@ -1032,9 +1125,10 @@
 	var dataResult = {};
 
 	//初始化layui
-	layui.use(['element', 'laydate', 'layedit', 'layer', 'form', 'upload'], function () {
+	layui.use(['element', 'laydate', 'table', 'layedit', 'layer', 'form', 'upload'], function () {
 		var element = layui.element,
 			form = layui.form,
+			table = layui.table,
 			layedit = layui.layedit,
 			laydate = layui.laydate,
 			$ = layui.$;
@@ -1200,6 +1294,131 @@
 		})
 
 
+		//弹窗8
+		$("#popup8").click(function () {
+			layer.open({
+				title: '发货物流确认',
+				content: "<div class='popup8-content'>" +
+					"<div class='selectTwo'> " +
+					" <form class='layui-form' action=''> " +
+					"<select name='city' lay-verify='required' class='select-sizeMin'> " +
+					"<option value=''> 请选择物流方式 </option>" +
+					"<option value='0'> 1 </option>" +
+					"<option value='1'>2</option>" +
+					"</select>" +
+					"</form>" +
+					"</div>" +
+					"<div class='input-second-container'>" +
+					"<input type='text' name='title' placeholder='请输入物流单号' autocomplete='off' class='layui-input'>" +
+					"<div class='input-number'>" +
+					"<span class='input-on-number'>0</span>/" +
+					"<span class='input-max-number'>100" +
+					"</span>" +
+					"</div>" +
+					"</div>" +
+					"</div>",
+				btn: ['取消', '确定'],
+				area: ['520px', '298px'], //宽高
+				success: function (data) {
+					$(".layui-layer-dialog").addClass('popup8');
+					$(".popup8 .layui-layer-title").show();
+					form.render();
+				},
+				yes: function (index, layero) {
+					//按钮1回调
+					// layer.close(index); //如果设定了yes回调，需进行手工关闭
+					layer.closeAll();
+				},
+				btn2: function (index, layero) {
+					//按钮2回调
+					// layer.close(index); //如果设定了yes回调，需进行手工关闭
+					return false //开启该代码可禁止点击该按钮关闭
+				}
+			});
+		})
+
+		//弹窗9
+		$("#popup9").click(function () {
+			layer.open({
+				title: '发货信息确认',
+				content: "<div class='popup9-content'>" +
+					"<div class='location'> " +
+					"<p> " +
+					"确认将以下勾选商品发送至：  " +
+					"</p>" +
+					"<p class='detailed-address'>" +
+					"浙江省杭州市余杭区金家渡南路3号，郭小二，18965895899" +
+					"</p>" +
+					"</div>" +
+					"<div class='selected'>" +
+					"<p>已选中<span class='main-color been-selected'>0</span>件商品<a class='sub1-color reselection' href='javascript:;'>重选</a></p>" +
+					"</div>" +
+					"<div class='table'>" +
+					"<table class='layui-table' style='table-layout:fixed;margin:0;'>" +
+					"<colgroup>" +
+					"<col width='6%'>" +
+					"<col width='50%'>" +
+					"<col width='10%'>" +
+					"</colgroup>" +
+					"<tbody class='tbody-content'>" +
+					"</tbody>" +
+					"</table>" +
+					"</div>" +
+					"</div>",
+				btn: ['取消', '确定'],
+				area: ['520px', '464px'], //宽高
+				success: function (data) {
+					$(".layui-layer-dialog").addClass('popup9');
+					$(".popup9 .layui-layer-title").show();
+					var $html;
+					for (let i = 0; i < 20; i++) {
+						$html += "<tr>";
+						$html += "<td>";
+						$html += "<form class='layui-form' action=''>";
+						$html +=
+							"<input type='checkbox' name='item_id' value='' lay-skin='primary' class='test' lay-filter='checkChild'>";
+						$html += "</form>";
+						$html += "</td>";
+						$html +=
+							"<td class='textOverflow' style='text-align:left;'>1002545585/234890007866525</td>";
+						$html += "<td class='tableTitle'>";
+						$html += "X 333";
+						$html += "</td>";
+						$html += "</tr>";
+						$('.tbody-content').html($html);
+					}
+
+					form.on('checkbox(checkChild)', function (data) {
+						// console.log(data.elem); //得到checkbox原始DOM对象
+						// console.log(data.elem.checked); //是否被选中，true或者false
+						// console.log(data.value); //复选框value值，也可以通过data.elem.value得到
+						// console.log(data.othis); //得到美化后的DOM对象
+						$('.been-selected').text($("input[name='item_id']:checked")
+							.length);
+					})
+
+					$(".reselection").click(function () {
+						console.log($(" .popup9 input[name='item_id']:checked").val());
+						$(".popup9 input[name='item_id']:checked").prop('checked',
+							false);
+						$('.layui-form-checked').removeClass('layui-form-checked');
+						$('.been-selected').text("0");
+
+					})
+					form.render();
+				},
+				yes: function (index, layero) {
+					//按钮1回调
+					// layer.close(index); //如果设定了yes回调，需进行手工关闭
+					layer.closeAll();
+				},
+				btn2: function (index, layero) {
+					//按钮2回调
+					// layer.close(index); //如果设定了yes回调，需进行手工关闭
+					return false //开启该代码可禁止点击该按钮关闭
+				}
+			});
+		})
 	})
 
 	//设置标签iframe高度
