--- a/index.html
+++ b/index.html
@@ -935,6 +935,124 @@
 					</tfoot>
 				</table>
 			</div>
+			<!-- 数据表格5 -->
+			<div class="table">
+				<table class="layui-table" style="table-layout:fixed;margin:0;">
+					<colgroup>
+						<col width="15%">
+						<col width="25%">
+						<col width="10%">
+						<col width="10%">
+						<col width="10%">
+						<col width="30%">
+					</colgroup>
+					<thead>
+						<tr>
+							<th style="text-align:left;">商品ID/外部商品ID</th>
+							<th style="text-align:left;">商品信息</th>
+							<th style="text-align:left;">促销价</th>
+							<th style="text-align:left;">实付价</th>
+							<th style="text-align:left;">数量</th>
+							<th style="text-align:left;">
+								商品总价
+								<svg class="icon tableIcon" aria-hidden="true">
+									<use xlink:href="#iconicon-tips-line"></use>
+								</svg>
+								<div class="tableIcon-content">
+									<div class="tableIcon-block">我是总成本我是总成本我是总成本我是总成本我是总成本我是总成本我是总成本
+									</div>
+									<div class="tableIcon-hover-arrow"></div>
+								</div>
+							</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td colspan="6" class="bgColorBlue">
+								<div class="layui-inline">
+									<div class="layui-inline marg-20">包裹1</div>
+									<div class="layui-inline marg-20">已发货</div>
+									<div class="layui-inline marg-28">德邦物流:123654789</div>
+									<div class="layui-inline click-color">查看物流</div>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="textOverflow" style="text-align:left;">
+								1002545585/2348900078665
+								<div class="blurs">
+									ZHR002
+								</div>
+							</td>
+							<td class="tableTitle">
+								<div class="pic-two">
+									<img src="https://mhuoba.oss-cn-hangzhou.aliyuncs.com/picture/audio/20190812/18/20190812183751909.jpg!w81h50"
+										alt="">
+								</div>
+								<div class="layui-inline message">
+									<p class="textTwoOver" title="">商品标题最多两行题最多两行行商品标题最多两行最多两行最多两行行最多两行最多两行</p>
+								</div>
+							</td>
+							<td style="text-align:left;">￥12.55</td>
+							<td style="text-align:left;">￥12.55</td>
+							<td style="text-align:left;">55</td>
+							<td>
+								<div class="goodNum">
+									<div class="goodPrice">￥12.55</div>
+									<div class="goodState">退款中</div>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td colspan="6" class="bgColorBlue">
+								<div class="layui-inline">
+									<div class="layui-inline marg-20">包裹2</div>
+									<div class="layui-inline marg-20">待发货</div>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="textOverflow" style="text-align:left;">
+								1002545585/2348900078665
+								<div class="blurs">
+									ZHR002
+								</div>
+							</td>
+							<td class="tableTitle">
+								<div class="pic-two">
+									<img src="https://mhuoba.oss-cn-hangzhou.aliyuncs.com/picture/audio/20190812/18/20190812183751909.jpg!w81h50"
+										alt="">
+								</div>
+								<div class="layui-inline message">
+									<p class="textTwoOver" title="">商品标题最多两行题最多两行行商品标题最多两行最多两行最多两行行最多两行最多两行</p>
+								</div>
+							</td>
+							<td style="text-align:left;">￥12.55</td>
+							<td style="text-align:left;">￥12.55</td>
+							<td style="text-align:left;">55</td>
+							<td>
+								<div class="goodNum">
+									<div class="goodPrice">￥12.55</div>
+									<div class="goodState">退货退款中</div>
+								</div>
+							</td>
+						</tr>
+					</tbody>
+					<tfoot>
+						<tr>
+							<td colspan="6">
+								<div class="footFlex">
+									<div class="footText">商品总价: ¥84.90</div>
+									<div class="footText">优惠价扣减: -¥1.00</div>
+									<div class="footText">多商品活动扣减: -¥4.90</div>
+									<div class="footText fg">运费: +¥4.90</div>
+									<div class="sum">订单总价: ¥82.22</div>
+								</div>
+							</td>
+						</tr>
+					</tfoot>
+				</table>
+			</div>
 		</article>
 		<article id="popup">
 			<p class="title">
