--- a/index.html
+++ b/index.html
@@ -1107,12 +1107,27 @@
 					<tfoot>
 						<tr>
 							<td colspan="6">
-								<div class="footFlex">
-									<div class="footText">商品总价: ¥84.90</div>
-									<div class="footText">优惠价扣减: -¥1.00</div>
-									<div class="footText">多商品活动扣减: -¥4.90</div>
-									<div class="footText fg">运费: +¥4.90</div>
-									<div class="sum">订单总价: ¥82.22</div>
+								<div class="teari">
+									<div class="mgt-5">
+										<div class="layui-inline w75">商品总价</div>
+										<div class="layui-inline w80">¥84.90</div>
+									</div>
+									<div class="mgt-5">
+										<div class="layui-inline w75">活动立减</div>
+										<div class="layui-inline w80">-¥10.00</div>
+									</div>
+									<div class="mgt-5">
+										<div class="layui-inline w75">优惠劵</div>
+										<div class="layui-inline w80">-¥10.00</div>
+									</div>
+									<div class="mgt-5">
+										<div class="layui-inline w75">运费</div>
+										<div class="layui-inline w80">-¥10.00</div>
+									</div>
+									<div class="mgt-5 col14">
+										<div class="layui-inline w75">订单总价</div>
+										<div class="layui-inline w80">¥84.90</div>
+									</div>
 								</div>
 							</td>
 						</tr>
